Updated imports in tasks

--- a/notebooks/tasks/4_DataSplit.ipynb
+++ b/notebooks/tasks/4_DataSplit.ipynb
@@ -46,7 +46,10 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import dlomix"
+    "import dlomix\n",
+    "from dlomix.models import RetentionTimePredictor\n",
+    "import tensorflow as tf\n",
+    "from dlomix.eval import TimeDeltaMetric"
    ]
   },
   {
@@ -115,6 +118,21 @@
     "\n",
     "history = model.fit(rtdata.train_data, validation_data=rtdata.val_data, epochs=15)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bonus:\n",
+    "Can you figure out what is wrong with these splits and how different are they from each other?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -133,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
