--- a/notebooks/tasks/3_ModelArchitecture.ipynb
+++ b/notebooks/tasks/3_ModelArchitecture.ipynb
@@ -46,7 +46,10 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import dlomix"
+    "import dlomix\n",
+    "from dlomix.models import RetentionTimePredictor\n",
+    "import tensorflow as tf\n",
+    "from dlomix.eval import TimeDeltaMetric"
    ]
   },
   {
@@ -116,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
