FIxed loss functions names

--- a/notebooks/tasks/2_LossFunction.ipynb
+++ b/notebooks/tasks/2_LossFunction.ipynb
@@ -73,7 +73,7 @@
    "source": [
     "The code below creates a model and trains it. You should try out different loss functions and observe the impact on the training. Please Refer to the initial notebook to analyze the results.\n",
     "\n",
-    "Hint: Explore the difference between mean squared error (`` and mean absolute error. Details about loss functions available in `tf.keras` are here: https://www.tensorflow.org/api_docs/python/tf/keras/losses"
+    "Hint: Explore the difference between mean squared error ('mse') and mean absolute error ('mae'). Details about loss functions available in `tf.keras` are here: https://www.tensorflow.org/api_docs/python/tf/keras/losses"
    ]
   },
   {
