Fixed errors in tasks notebooks

--- a/notebooks/tasks/3_ModelArchitecture.ipynb
+++ b/notebooks/tasks/3_ModelArchitecture.ipynb
@@ -97,7 +97,7 @@
     "# compile the model  with the optimizer and the metrics we want to use, we can add our custom time-delta metric\n",
     "\n",
     "model.compile(optimizer=optimizer, \n",
-    "            loss=loss_function, metrics=[TimeDeltaMetric()])\n",
+    "            loss='mse', metrics=[TimeDeltaMetric()])\n",
     "\n",
     "history = model.fit(rtdata.train_data, validation_data=rtdata.val_data, epochs=15)"
    ]
