--- a/notebooks/tasks/4_DataSplit.ipynb
+++ b/notebooks/tasks/4_DataSplit.ipynb
@@ -71,12 +71,12 @@
    "outputs": [],
    "source": [
     "TRAIN_DATAPATH = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_dataset/proteomTools_train_val.csv'\n",
-    "TRAIN_DATAPATH_A = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix/main/example_dataset/split_a/proteomTools_train_val_a.csv'\n",
-    "TRAIN_DATAPATH_B = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix/main/example_dataset/split_b/proteomTools_train_val_b.csv'\n",
+    "TRAIN_DATAPATH_A = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_dataset/split_a/proteomTools_train_val_a.csv'\n",
+    "TRAIN_DATAPATH_B = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_dataset/split_b/proteomTools_train_val_b.csv'\n",
     "\n",
-    "TEST_DATAPATH = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix/main/example_dataset/proteomTools_test.csv'\n",
-    "TEST_DATAPATH_A = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix/main/example_dataset/split_a/proteomTools_test_a.csv'\n",
-    "TEST_DATAPATH_B = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix/main/example_dataset/split_b/proteomTools_test_b.csv'"
+    "TEST_DATAPATH = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_dataset/proteomTools_test.csv'\n",
+    "TEST_DATAPATH_A = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_dataset/split_a/proteomTools_test_a.csv'\n",
+    "TEST_DATAPATH_B = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_dataset/split_b/proteomTools_test_b.csv'"
    ]
   },
   {
@@ -97,7 +97,7 @@
     "# when you change the training dataset\n",
     "\n",
     "test_rtdata = RetentionTimeDataset(data_source=TEST_DATAPATH,\n",
-    "                              pad_length=30, batch_size=BATCH_SIZE, test=True)"
+    "                              seq_length=30, batch_size=BATCH_SIZE, test=True)"
    ]
   },
   {
@@ -124,7 +124,7 @@
    "metadata": {},
    "source": [
     "### Bonus:\n",
-    "Can you figure out what is wrong with these splits and how different are they from each other?"
+    "After analyzing the results, can you figure out what is wrong with these splits and how different are they from each other?"
    ]
   },
   {
