pinned version and removed decprecated decay argument

--- a/notebooks/tasks/1_LearningRate.ipynb
+++ b/notebooks/tasks/1_LearningRate.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "# install the mlomix package in the current environment using pip\n",
     "\n",
-    "!python -m pip install -q git+https://github.com/wilhelm-lab/dlomix"
+    "!python -m pip install -q dlomix==0.0.3"
    ]
   },
   {
@@ -85,7 +85,7 @@
     "# create model\n",
     "model = RetentionTimePredictor(seq_length=30)\n",
     "\n",
-    "optimizer = tf.keras.optimizers.SGD(learning_rate=1e-4, decay=1e-7)\n",
+    "optimizer = tf.keras.optimizers.SGD(learning_rate=1e-4)\n",
     "\n",
     "# compile the model  with the optimizer and the metrics we want to use, we can add our custom time-delta metric\n",
     "\n",
@@ -112,7 +112,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
