--- a/notebooks/tasks/3_ModelArchitecture.ipynb
+++ b/notebooks/tasks/3_ModelArchitecture.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "# install the mlomix package in the current environment using pip\n",
     "\n",
-    "!python -m pip install -q git+https://github.com/wilhelm-lab/dlomix"
+    "!python -m pip install -q dlomix==0.0.3"
    ]
   },
   {
@@ -92,7 +92,7 @@
     "# create model\n",
     "model = RetentionTimePredictor(seq_length=30, embedding_dim=DIM, encoder=ENCODER)\n",
     "\n",
-    "optimizer = tf.keras.optimizers.SGD(learning_rate=1e-4, decay=1e-7)\n",
+    "optimizer = tf.keras.optimizers.SGD(learning_rate=1e-4)\n",
     "\n",
     "# compile the model  with the optimizer and the metrics we want to use, we can add our custom time-delta metric\n",
     "\n",
