pin version to 0.0.3 main notebook

--- a/notebooks/Example_RTModel_Walkthrough_colab.ipynb
+++ b/notebooks/Example_RTModel_Walkthrough_colab.ipynb
@@ -45,7 +45,7 @@
       "source": [
         "# install the DLOmix package in the current environment using pip\n",
         "\n",
-        "!python -m pip install -q git+https://github.com/wilhelm-lab/dlomix"
+        "!python -m pip install -q dlomix==0.0.3"
       ]
     },
     {
@@ -359,18 +359,7 @@
       "metadata": {
         "id": "ngz4zlnwr7qV"
       },
-      "outputs": [
-        {
-          "ename": "",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31mRunning cells with '/usr/bin/python3' requires the ipykernel package.\n",
-            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-            "\u001b[1;31mCommand: '/usr/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# create the dataset object for test data\n",
         "\n",
