Added sample datasets for intensity

--- a/notebooks/Intensity/Example_IntensityModel_Walkthrough_colab.ipynb
+++ b/notebooks/Intensity/Example_IntensityModel_Walkthrough_colab.ipynb
@@ -6,7 +6,7 @@
     "id": "7YWkUVjVr7qJ"
    },
    "source": [
-    "# Retention Time Preidiction \n",
+    "# Intensity Preidiction \n",
     "\n",
     "This notebook is prepared to be run in Google [Colaboratory](https://colab.research.google.com/). In order to train the model faster, please change the runtime of Colab to use Hardware Accelerator, either GPU or TPU."
    ]
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,16 +569,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions_acc = prediction(predictions_df)"
+    "predictions_acc = normalize_predictions(predictions_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
        "Name: spectral_angle, dtype: float64"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,15 +603,6 @@
    "source": [
     "predictions_acc['spectral_angle'].describe()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "-N6kL56pTmCV"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
