--- a/notebooks/Intensity/Example_IntensityModel_Walkthrough_colab.ipynb
+++ b/notebooks/Intensity/Example_IntensityModel_Walkthrough_colab.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 154,
    "metadata": {
     "id": "lzNXJ-s6r7qQ"
    },
@@ -245,7 +245,7 @@
     }
    ],
    "source": [
-    "TRAIN_DATAPATH = 'D:/Compmass/proteomeTools_train_val.csv'\n",
+    "TRAIN_DATAPATH = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/tasks/intensity/example_datasets/Intensity/proteomeTools_train_val.csv'\n",
     "BATCH_SIZE = 64\n",
     "\n",
     "int_data = IntensityDataset(data_source=TRAIN_DATAPATH,\n",
@@ -495,7 +495,7 @@
    "source": [
     "# create the dataset object for test data\n",
     "\n",
-    "TEST_DATAPATH = 'D:/Compmass/proteomeTools_test.csv'\n",
+    "TEST_DATAPATH = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/tasks/intensity/example_datasets/Intensity/proteomeTools_test.csv'\n",
     "\n",
     "test_int_data = IntensityDataset(data_source=TEST_DATAPATH,\n",
     "                              seq_length=30, collision_energy_col='collision_energy',batch_size=32, test=True)"
