Integrated weights and biases in the notebook

--- a/notebooks/Intensity/Example_IntensityModel_Walkthrough_colab.ipynb
+++ b/notebooks/Intensity/Example_IntensityModel_Walkthrough_colab.ipynb
@@ -17,7 +17,7 @@
     "id": "S3DlTOq3r7qM"
    },
    "source": [
-    "This notebook presents a short walkthrough the process of reading a dataset and training a model for retention time prediction. The dataset is an example dataset extracted from a ProteomTools dataset generated in the **Chair of Bioanalytics** at the **Technical University of Munich**.\n",
+    "This notebook presents a short walkthrough the process of reading a dataset and training a model for intensity prediction. The dataset is an example dataset extracted from a ProteomeTools dataset generated in the **Chair of Bioanalytics** at the **Technical University of Munich**.\n",
     "\n",
     "The framework being used is a custom wrapper on top of Keras/TensorFlow. The working name of the package is for now DLOmix -  `dlomix`."
    ]
@@ -25,7 +25,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import numpy\n",
@@ -133,13 +135,24 @@
     },
     "id": "aO-69zbKsGey",
     "outputId": "2d7f5f84-aa06-4ec7-9a2b-c1f546031baf",
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "# install the DLOmix package in the current environment using pip\n",
     "\n",
     "!python -m pip install -q dlomix==0.0.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "!python -m pip install wandb"
    ]
   },
   {
@@ -159,7 +172,8 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "l0CS0tFur7qN",
-    "outputId": "16c0f94a-97ab-4445-ef6b-4ac28029e64d"
+    "outputId": "16c0f94a-97ab-4445-ef6b-4ac28029e64d",
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -189,6 +203,39 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 0. Import and Initialize Weights and Biases\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# import wandb and the Keras Callback\n",
+    "\n",
+    "import wandb\n",
+    "from wandb.keras import WandbCallback"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# enter project name\n",
+    "project_name = 'dlomix_intensity'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "41qXroyKr7qP"
    },
@@ -200,9 +247,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "id": "RiXz_epEr7qQ"
+    "id": "RiXz_epEr7qQ",
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -211,11 +259,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "id": "lzNXJ-s6r7qQ"
+    "id": "lzNXJ-s6r7qQ",
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "0        [0, 0, 1, 0, 0, 0]\n",
+      "1        [0, 1, 0, 0, 0, 0]\n",
+      "2        [0, 0, 1, 0, 0, 0]\n",
+      "3        [0, 0, 1, 0, 0, 0]\n",
+      "4        [0, 0, 1, 0, 0, 0]\n",
+      "                ...        \n",
+      "18259    [0, 1, 0, 0, 0, 0]\n",
+      "18260    [0, 1, 0, 0, 0, 0]\n",
+      "18261    [0, 0, 1, 0, 0, 0]\n",
+      "18262    [0, 1, 0, 0, 0, 0]\n",
+      "18263    [0, 0, 1, 0, 0, 0]\n",
+      "Name: precursor_charge_onehot, Length: 18264, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "TRAIN_DATAPATH = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/tasks/intensity/example_datasets/Intensity/proteomeTools_train_val.csv'\n",
     "BATCH_SIZE = 64\n",
@@ -235,30 +304,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "y1l6YedCr7qS",
-    "outputId": "16a1d57b-7720-4cb1-cdea-a32d9d2c3804"
+    "outputId": "16a1d57b-7720-4cb1-cdea-a32d9d2c3804",
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Training examples', 14656)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     " \"Training examples\", BATCH_SIZE * len(int_data.train_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "uEnVWjtRr7qT",
-    "outputId": "95550088-76c5-4f1b-8181-dddb942d94b0"
+    "outputId": "95550088-76c5-4f1b-8181-dddb942d94b0",
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Validation examples', 3712)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"Validation examples\", BATCH_SIZE * len(int_data.val_data)"
    ]
@@ -278,9 +371,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "id": "Q8SGTvfRr7qT"
+    "id": "Q8SGTvfRr7qT",
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -289,9 +383,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "id": "ZqrsF6APr7qU"
+    "id": "ZqrsF6APr7qU",
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -311,9 +406,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "id": "IkPIHuWEr7qU"
+    "id": "IkPIHuWEr7qU",
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -326,14 +422,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "id": "xLy32wk7r7qU"
+    "id": "xLy32wk7r7qU",
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "# create the optimizer object\n",
-    "optimizer = tf.keras.optimizers.Adam(learning_rate=0.0001)\n",
+    "optimizer = tf.keras.optimizers.Adam(learning_rate=0.001)\n",
     "\n",
     "# compile the model  with the optimizer and the metrics we want to use, we can add our custom timedelta metric\n",
     "model.compile(optimizer=optimizer,\n",
@@ -359,13 +456,227 @@
     },
     "id": "E14EcoYTr7qV",
     "outputId": "4455efd2-161b-4dff-e747-6db1724defbb",
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.13.10"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>D:\\Compmass\\dlomix-resources\\notebooks\\Intensity\\wandb\\run-20230224_125340-u2ctska4</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/prosit-compms/dlomix_intensity/runs/u2ctska4' target=\"_blank\">walktrough</a></strong> to <a href='https://wandb.ai/prosit-compms/dlomix_intensity' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/prosit-compms/dlomix_intensity' target=\"_blank\">https://wandb.ai/prosit-compms/dlomix_intensity</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/prosit-compms/dlomix_intensity/runs/u2ctska4' target=\"_blank\">https://wandb.ai/prosit-compms/dlomix_intensity/runs/u2ctska4</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Layers in a Sequential model should only have a single input tensor, but we receive a <class 'list'> input: [<tf.Tensor 'prosit_intensity_predictor/Cast:0' shape=(None, 1) dtype=float32>, <tf.Tensor 'prosit_intensity_predictor/Cast_1:0' shape=(None, 6) dtype=float32>]\n",
+      "Consider rewriting this model with the Functional API.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Layers in a Sequential model should only have a single input tensor, but we receive a <class 'list'> input: [<tf.Tensor 'prosit_intensity_predictor/Cast:0' shape=(None, 1) dtype=float32>, <tf.Tensor 'prosit_intensity_predictor/Cast_1:0' shape=(None, 6) dtype=float32>]\n",
+      "Consider rewriting this model with the Functional API.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "encoded sequence:  Tensor(\"prosit_intensity_predictor/string_lookup/Identity:0\", shape=(None, 30), dtype=int64)\n",
+      "WARNING:tensorflow:Layers in a Sequential model should only have a single input tensor, but we receive a <class 'list'> input: [<tf.Tensor 'prosit_intensity_predictor/encoder_att/Sum_1:0' shape=(None, 512) dtype=float32>, <tf.Tensor 'prosit_intensity_predictor/sequential/meta_dense_do/dropout/Mul_1:0' shape=(None, 512) dtype=float32>]\n",
+      "Consider rewriting this model with the Functional API.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Layers in a Sequential model should only have a single input tensor, but we receive a <class 'list'> input: [<tf.Tensor 'prosit_intensity_predictor/encoder_att/Sum_1:0' shape=(None, 512) dtype=float32>, <tf.Tensor 'prosit_intensity_predictor/sequential/meta_dense_do/dropout/Mul_1:0' shape=(None, 512) dtype=float32>]\n",
+      "Consider rewriting this model with the Functional API.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Layers in a Sequential model should only have a single input tensor, but we receive a <class 'list'> input: [<tf.Tensor 'prosit_intensity_predictor/Cast:0' shape=(None, 1) dtype=float32>, <tf.Tensor 'prosit_intensity_predictor/Cast_1:0' shape=(None, 6) dtype=float32>]\n",
+      "Consider rewriting this model with the Functional API.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Layers in a Sequential model should only have a single input tensor, but we receive a <class 'list'> input: [<tf.Tensor 'prosit_intensity_predictor/Cast:0' shape=(None, 1) dtype=float32>, <tf.Tensor 'prosit_intensity_predictor/Cast_1:0' shape=(None, 6) dtype=float32>]\n",
+      "Consider rewriting this model with the Functional API.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "encoded sequence:  Tensor(\"prosit_intensity_predictor/string_lookup/Identity:0\", shape=(None, 30), dtype=int64)\n",
+      "WARNING:tensorflow:Layers in a Sequential model should only have a single input tensor, but we receive a <class 'list'> input: [<tf.Tensor 'prosit_intensity_predictor/encoder_att/Sum_1:0' shape=(None, 512) dtype=float32>, <tf.Tensor 'prosit_intensity_predictor/sequential/meta_dense_do/dropout/Mul_1:0' shape=(None, 512) dtype=float32>]\n",
+      "Consider rewriting this model with the Functional API.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Layers in a Sequential model should only have a single input tensor, but we receive a <class 'list'> input: [<tf.Tensor 'prosit_intensity_predictor/encoder_att/Sum_1:0' shape=(None, 512) dtype=float32>, <tf.Tensor 'prosit_intensity_predictor/sequential/meta_dense_do/dropout/Mul_1:0' shape=(None, 512) dtype=float32>]\n",
+      "Consider rewriting this model with the Functional API.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 57/229 [======>.......................] - ETA: 1:40 - loss: 0.6561 - mse: 2.2714"
+     ]
+    }
+   ],
    "source": [
+    "wandb.init(project=project_name, name='walktrough')\n",
     "history = model.fit(int_data.train_data,\n",
     "                    validation_data=int_data.val_data,\n",
-    "                    epochs=1)"
+    "                    epochs=1,callbacks=[WandbCallback()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Waiting for W&B process to finish... <strong style=\"color:green\">(success).</strong>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e3e574219af848c7b489f8c532a2c17e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='45.262 MB of 45.262 MB uploaded (0.000 MB deduped)\\r'), FloatProgress(value=1.0, m…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
+       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
+       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>epoch</td><td>▁</td></tr><tr><td>loss</td><td>▁</td></tr><tr><td>mse</td><td>▁</td></tr><tr><td>val_loss</td><td>▁</td></tr><tr><td>val_mse</td><td>▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>best_epoch</td><td>0</td></tr><tr><td>best_val_loss</td><td>0.62441</td></tr><tr><td>epoch</td><td>0</td></tr><tr><td>loss</td><td>0.73405</td></tr><tr><td>mse</td><td>1.97952</td></tr><tr><td>val_loss</td><td>0.62441</td></tr><tr><td>val_mse</td><td>2.5578</td></tr></table><br/></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run <strong style=\"color:#cdcd00\">walktrhough</strong> at: <a href='https://wandb.ai/prosit-compms/dlomix_intensity/runs/dpwsufjw' target=\"_blank\">https://wandb.ai/prosit-compms/dlomix_intensity/runs/dpwsufjw</a><br/>Synced 5 W&B file(s), 1 media file(s), 4 artifact file(s) and 0 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>.\\wandb\\run-20230224_124616-dpwsufjw\\logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Mark the run as finished\n",
+    "\n",
+    "wandb.finish()"
    ]
   },
   {
@@ -385,7 +696,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "ngz4zlnwr7qV"
+    "id": "ngz4zlnwr7qV",
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -401,7 +713,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "RrvR8Cl3r7qV"
+    "id": "RrvR8Cl3r7qV",
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -413,7 +726,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "predictions_df = pd.DataFrame()"
@@ -422,7 +737,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "predictions"
@@ -431,7 +748,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "predictions_df['sequences'] = test_rtdata.sequences\n",
@@ -443,10 +762,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "predictions_acc = normalize_predictions(predictions_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "predictions_acc['spectral_angle'].describe()"
    ]
   },
   {
@@ -457,22 +789,15 @@
    },
    "outputs": [],
    "source": [
-    "predictions_acc['spectral_angle'].describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "sns.violinplot(predictions_acc['spectral_angle'])"
